@@ -1,1 +1,4 @@
 td { white-space: nowrap; }
+#onoff { position:fixed; top:0; left:70px; }
+#micro { position:fixed; top:0; left:70px; }
+
